# home_work19.2

./: .env.sample  category_data.json  groups.json  product_data.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
blog/templates/blog/includes/: inc_menu.html
catalog/: urls.py
catalog/templates/: contacts.html  home.html
config/: settings.py  urls.py
management/commands/: command.py
product/: admin.py  forms.py  models.py  services.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0002_product_views.py  0003_remove_product_manufactured_at.py  0003_version.py  0004_product_owner.py  0005_alter_product_options_product_publication.py
product/templates/: base.html  product_detail.html  product_list.html
product/templates/product/: base.html  category_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
product/templates/product/includes/: inc_menu.html
product/templatetags/: my_tags.py
static/css/: bootstrap.min.css
static/js/: color-modes.js
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: password_reset.html  user_form.html
